@@ -1,4 +1,4 @@
-KAppTemplate v0.5
+KAppTemplate v0.5.2
 Kurt Granroth <granroth@kde.org>
 ----------------------------------------------------------------------
 
