@@ -1,16 +1,16 @@
 Begin3
 Title:          KAppTemplate
-Version:        0.5
-Entered-date:   25DEC99
+Version:        0.5.2
+Entered-date:   12Jan00
 Description:    Shell script that will automatically create a KTMainWindow-
                 based KDE app framework with user input.
-Keywords:       KDE 
+Keywords:       KDE
 Author:         Kurt Granroth <granroth@kde.org>
 Maintained-by:  Kurt Granroth <granroth@kde.org>
 Home-page:      http://www.pobox.com/~kurt_granroth/kapptemplate
 Primary-site:   cvs.kde.org:/home/kde/kdesdk/kapptemplate
-                xxxxxx  kapptemplate-0.5.tar.gz
-                xxx     kapptemplate-0.5.lsm
+                xxxxxx  kapptemplate-0.5.2.tar.gz
+                xxx     kapptemplate-0.5.2.lsm
 Platform:       Unix
 Copying-policy: GPL
 End
