@@ -13,6 +13,6 @@ Alternate-site:
 Primary-site:   ftp://ftp.kde.org/pub/kde/unstable/apps/utils
                 xxxxxx  $APP_NAME_LC-$APP_VERSION.tar.gz
                 xxx     $APP_NAME_LC-$APP_VERSION.lsm
-Platform:       Linux. Needs Qt and KDE 2.0
+Platform:       Linux. Needs Qt 2.1 and KDE 2.0
 Copying-policy: GPL
 End
