@@ -1,66 +1,7 @@
 echo "Creating $LOCATION_ROOT/po/Makefile.am...";
 cat << EOF > $LOCATION_ROOT/po/Makefile.am
-GMOFILES = 
-POFILES = \$(GMOFILES:.gmo=.po) 
+POFILES = AUTO
 
-localedir = \$(kde_locale)
-
-MAINTAINERCLEANFILES = \$(GMOFILES)
-
-GMSGFMT = @GMSGFMT@
-MSGFMT = @MSGFMT@
-EXTRA_DIST = \$(PACKAGE).pot \$(POFILES) \$(GMOFILES)
-
-
-all: all-@USE_NLS@
-install-data-local: install-@USE_NLS@
-
-SUFFIXES = .po .gmo
-
-.po.mo:
-	\$(MSGFMT) -o \$@ \$<
-
-.po.gmo:
-	file=\$(srcdir)/\`echo \$* | sed 's,.*/,,'\`.gmo \\
-	&& rm -f \$\$file && \$(GMSGFMT) -o \$\$file \$< 
-
-all-yes: \$(GMOFILES)
-all-no:
-
-install-yes: all
-	@catalogs='\$(GMOFILES)'; \\
-	for cat in \$\$catalogs; do \\
-	destdir=\$(localedir); \\
-	lang=\`echo \$\$cat | sed 's/\\.gmo//'\`; \\
-	name=\$(PACKAGE).mo \\
-	dir=\$\$destdir/\$\$lang/LC_MESSAGES; \\
-	\$(mkinstalldirs) \$(DESTDIR)\$\$dir; \\
-	\$(INSTALL_DATA) \$\$cat \$(DESTDIR)\$\$dir/\$\$name; \\
-	  echo "installing \$\$cat as \$(DESTDIR)\$\$dir/\$\$name"; \\
-	done
-
-install-no:
-
-uninstall-local:
-	@catalogs='\$(GMOFILES)'; \\
-	for cat in \$\$catalogs; do \\
-	destdir=\$(localedir); \\
-	lang=\`echo \$\$cat | sed 's/\\.gmo//'\`; \\
-	name=\$(PACKAGE).mo; \\
-	dir=\$\$destdir/\$\$lang/LC_MESSAGES; \\
-	rm -f \$\$cat \$(DESTDIR)\$\$dir/\$\$name; \\
-	echo "removing \$(DESTDIR)\$\$dir/\$\$name" ; \\
-	done
-
-merge:
-	@catalogs='\$(POFILES)'; \\
-	for cat in \$\$catalogs; do \\
-	name=\$(PACKAGE).pot ; \\
-	echo \$\$cat \$\$name; \\
-	msgmerge \$\$cat \$\$name > \$\$cat.new ; \\
-	if diff \$\$cat \$\$cat.new; then \\
-		rm \$\$cat.new;  \\
-	else  \\
-		mv \$\$cat.new \$\$cat ; \\
-	fi; \\
-	done
+# insert all of the languages you support, here.
+# e.g., KDE_LANG = de es fr
+KDE_LANG =
