@@ -1,3 +1,10 @@
+Jan-12-2000 - Kurt Granroth (v0.5.2)
+  o Use KAboutData and KCmdLineArgs
+
+Dec-28-1999 - Kurt Granroth (v0.5.1)
+  o The po Makefile now uses the autogenerated rules.  I don't know
+    why I didn't notice that capability before
+
 Dec-25-1999 - Kurt Granroth (v0.5)
   o Use standard actions instead of constructing everything manually
     (big change!)
